<resources>
    <string name="app_name">TerceiraProva_01</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="escolha_o_sensor">Escolha o sensor:</string>
    <string name="jo_o_gabriel_devlopment">João Gabriel Devlopment</string>
    <string name="gyroscope">gyroscope</string>
    <string name="light">Light</string>
    <string name="accelerometer">accelerometer</string>
    <string name="proximity">proximity</string>
</resources>