<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#072759"
        tools:context=".Fragments.HomeFragment">

        <Button
            android:id="@+id/buttonProximity"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/proximity"
            app:backgroundTint="#041633"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLight" />

        <Button
            android:id="@+id/ButtonAccelerometer"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/accelerometer"
            app:backgroundTint="#041633"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/buttonLight"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/light"
            app:backgroundTint="#041633"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ButtonAccelerometer" />

        <Button
            android:id="@+id/buttonGyroscope"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/gyroscope"
            app:backgroundTint="#041633"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonProximity" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/escolha_o_sensor"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/jo_o_gabriel_devlopment"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>